...
    <plurals name="total_photos">
        <item quantity="one">%1$d photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <string name="no_location">No location data for this photo</string>
    <string name="one_photo_fragment_title">Photo Details</string>
    <string name="onboarding_button_text_next">next</string>
    <string name="download_started">Download started</string>
    <string name="not_specified">not specified</string>
</resources>
